Fix the inbox popup being light on dark mode

--- a/discord.css
+++ b/discord.css
@@ -77,13 +77,12 @@ body {
   border-top: 1px solid var(--background-modifier-accent);
 }
 /* PINNED MESSAGES AND INBOX */
-.theme-dark .messagesPopoutWrap-1MQ1bW, .container-enaOkj {
+.messagesPopoutWrap-1MQ1bW, .container-enaOkj {
   background-color: rgba(54, 57, 63, 0.92);
   border-radius: 15px;
 }
-.theme-light .messagesPopoutWrap-1MQ1bW, .container-enaOkj {
+.theme-light .messagesPopoutWrap-1MQ1bW, .theme-light .container-enaOkj {
   background-color: rgba(232, 238, 248, 0.8);
-  border-radius: 15px;
 }
 /* SCREENSHARE ICON */
 .badge-1JXQev {
